--- a/Download/get_data_from_Flywheel.ipynb
+++ b/Download/get_data_from_Flywheel.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,13 +37,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# the file to be downloaded\n",
     "project_name = \"GRMPY_822831\"\n",
-    "file_to_download = \"network.txt\"\n",
+    "file_to_download = \"quality.csv\"\n",
     "\n",
     "# create a folder to store downloaded files\n",
     "outpath = \"/Users/hxia/Documents/xia_gps/data/flywheel_data\"\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,17 +77,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 458,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:Flywheel:Use \"pip install flywheel-sdk~=11.3.4\" to install a compatible version for this server\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fw = flywheel.Client()\n",
     "project = fw.projects.find_first('label=\"' + project_name + '\"')\n",
@@ -96,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
